# LLM-Guardrails-Demo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
guardrail_configs/minimal_guardrails_config/: config.yml  prompts.yml
guardrail_configs/more_guardrails_config/: actions.py  config.yml
guardrail_configs/no_guardrails_config/: config.yml
guardrail_configs/no_guardrails_config/rails/: rails.co
guardrail_configs/with_guardrails_config/: config.yml  prompts.yml
guardrail_configs/with_guardrails_config/rails/: rails.co
llm_guardrails_demo/: __init__.py  gradio_ui.py  llm_motors_chatbot.py  logger.py  ui.py  utils.py
llm_guardrails_demo/config/: actions.py  config.yml  prompts.yml  rails.co
llm_guardrails_demo/config/kb/: MiniMax.md
llm_guardrails_demo/config/rails/: blocked_terms.co
llm_motors_catalog/: CyberCruiser.md  LLMotor_Catalog.md  TerraFormer.md
notebooks/: claude_test.ipynb  hello_world.ipynb  llm_motor_chatbot.ipynb  llmotor_chatbot.ipynb  llmotor_chatbot_under_the_hood.ipynb
tests/: test_chatbot.py
