[tool.poetry]
name = "llm-guardrails-comparison"
version = "0.1.0"
description = "Comparison between NeMo Guardrails and Guardrails AI on a simple chatbot."
authors = ["Sam Sweere <samsweere@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = '>=3.11,<3.12'
nemoguardrails = "^0.8.1"
guardrails-ai = "^0.4.2"
anthropic = "^0.21.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.3.4"
mypy = "^1.9.0"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
