[tool.poetry]
name = "llm-guardrails-demo"
version = "0.1.0"
description = "Demonstration on LLM Guardrails on a simple chatbot."
authors = ["Sam Sweere <samsweere@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "llm_guardrails_demo"}]

[tool.poetry.dependencies]
python = '>=3.11,<3.12'
nemoguardrails = "^0.8.1"
# guardrails-ai = "^0.4.2"
# anthropic = "^0.21.3"
gradio = "^4.27.0"
openai = "^1.23.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.3.4"
mypy = "^1.9.0"
ipykernel = "^6.29.3"
ipywidgets = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Ruff is flake8 + isort + other tools implemented in Rust
include = ['*.py', '*.ipynb', 'pyproject.toml']

# The fix value enables or disables auto fixing
fix = false

line-length = 120

target-version = 'py311'

[tool.ruff.lint]
ignore = [
    'D100', # Missing docstring in public module
    'D104' , # Missing docstring in public package
    'PD901', # `df` is a bad variable name. Be kinder to your future self.
    ]

select = [
    'E',    # pycodestyle
    'W',    # pycodestyle
    'F',    # pyflakes
    'I',    # isort
    'B',    # flake8-bugbear
    'C4',   # flake8-comprehensions
    'UP',   # pyupgrade
    'PD',   # pandas-vet
    'SIM',  # flake8-simplify
    # 'D',    # pydocstyle
]

[tool.ruff.lint.per-file-ignores]
'notebooks/*' = [

    'E501', # Line too long, most of the time not a problem in a notebook
    'B018', # Found useless expression. Either assign it to a variable or remove it. Often used in notebooks for debugging
    'E402', # Module level import not at top of file, this is usually not the case in a notebook
]

[tool.ruff.lint.pydocstyle]
convention = 'google'
